--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,13 @@
-groovy.version = ''
-felix.version = '4.0.2'
-
-dependencies {
-    compile 'org.codehaus.groovy:groovy-all:${groovy.version}'
-    compile 'org.apache.felix:org.apache.felix.framework:${felix.version}'
+allprojects {
+	apply plugin: 'eclipse'
+	apply plugin: 'groovy'
+	
+	repositories {
+		mavenCentral()
+	}
+	
+	dependencies {
+	    compile 'org.codehaus.groovy:groovy-all:2.0.7'
+	    compile 'org.apache.felix:org.apache.felix.framework:4.0.2'
+	}
 }
