--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,18 @@
 allprojects {
 	apply plugin: 'eclipse'
-	apply plugin: 'groovy'
-	apply plugin: 'osgi'
 	
 	repositories {
 		mavenCentral()
 	}
-	
+}
+
+subprojects {
+	apply plugin: 'groovy'
+	apply plugin: 'osgi'
+
 	dependencies {
 	    compile 'org.codehaus.groovy:groovy-all:2.0.7'
 	    compile 'org.apache.felix:org.apache.felix.framework:4.0.2'
-		testCompile 'org.spockframework:spock-core:0.7-groovy-2.0'
+	    testCompile 'org.spockframework:spock-core:0.7-groovy-2.0'
 	}
 }
