Set root project name

--- a/settings.gradle
+++ b/settings.gradle
@@ -3,3 +3,5 @@ include 'figurate-common', 'figurate-mail', 'figurate-osgi'
 rootProject.children.each { module ->
     module.projectDir = new File("$rootDir/modules/$module.name")
 }
+
+rootProject.name = 'figurate'
