--- a/modules/figurate-osgi/build.gradle
+++ b/modules/figurate-osgi/build.gradle
@@ -1,3 +1,4 @@
 dependencies {
   compile 'org.apache.aries.blueprint:org.apache.aries.blueprint:1.1.0'
+  compile 'org.apache.aries.blueprint:org.apache.aries.blueprint.annotation.impl:1.0.0'
 }
