--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,4 @@
-include 'figurate-common', 'figurate-cache', 'figurate-mail', 'figurate-osgi'
+include 'figurate-common', 'figurate-cache', 'figurate-log', 'figurate-mail', 'figurate-osgi'
 
 rootProject.children.each { module ->
     module.projectDir = new File("$rootDir/modules/$module.name")
