--- a/modules/figurate-log/build.gradle
+++ b/modules/figurate-log/build.gradle
@@ -2,5 +2,5 @@ dependencies {
   compile 'org.slf4j:slf4j-api:1.7.5'
   compile 'commons-logging:commons-logging-api:1.1'
   compile 'org.apache.logging.log4j:log4j-api:2.0-beta9'
-  compile 'org.osgi:org.osgi.core:5.0.0'
+  compile 'org.osgi:org.osgi.compendium:5.0.0'
 }
