--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,31 @@
 allprojects {
 	apply plugin: 'eclipse'
+	apply plugin: 'groovy'
 	
 	repositories {
 		mavenCentral()
 	}
+	
+	dependencies {
+		compile 'org.codehaus.groovy:groovy-all:2.1.7'
+	}
 }
 
 subprojects {
-	apply plugin: 'groovy'
 	apply plugin: 'osgi'
 
 	dependencies {
-	    compile 'org.codehaus.groovy:groovy-all:2.1.7'
 	    compile 'org.apache.felix:org.apache.felix.framework:4.0.2'
 	    testCompile 'org.spockframework:spock-core:0.7-groovy-2.0'
 	}
+}
+
+dependencies {
+	testCompile 'org.ops4j.pax.exam:pax-exam-container-native:3.3.0'
+	testCompile 'org.ops4j.pax.exam:pax-exam-junit4:3.3.0'
+	testCompile 'org.ops4j.pax.exam:pax-exam-link-mvn:3.3.0'
+	testCompile 'org.ops4j.pax.url:pax-url-aether:1.6.0'
+	testCompile 'ch.qos.logback:logback-classic:1.0.13'
+	testCompile 'com.google.guava:guava:15.0'
+	testCompile 'org.apache.felix:org.apache.felix.framework:4.0.2'
 }
