--- a/modules/figurate-common/build.gradle
+++ b/modules/figurate-common/build.gradle
@@ -1,4 +1,5 @@
 dependencies {
   compile 'org.apache.commons:commons-lang3:3.1'
   compile 'org.codehaus.gpars:gpars:1.1.0'
+  compile 'javax.ws.rs:javax.ws.rs-api:2.0'
 }
