--- a/modules/figurate-monitor/build.gradle
+++ b/modules/figurate-monitor/build.gradle
@@ -5,6 +5,6 @@ dependencies {
 
 jar {
   manifest {
-    instruction 'Export-Package', 'org.javasimon.*', '!org.javasimon.console*'
+    instruction 'Export-Package', '!org.javasimon.console*, org.javasimon.*'
   }
 }
