--- a/modules/figurate-monitor/build.gradle
+++ b/modules/figurate-monitor/build.gradle
@@ -3,8 +3,14 @@ dependencies {
   compile 'org.javasimon:javasimon-console-embed:3.4.0'
 }
 
+task copyDeps(type: Copy) {
+    from configurations.runtime
+    into "${buildDir}/deps"
+}
+
 jar {
   manifest {
-    instruction 'Export-Package', '!org.javasimon.console*, org.javasimon.*'
+    instruction 'Include-Resource', '@deps/javasimon-core-3.4.0.jar, @deps/javasimon-console-embed-3.4.0.jar'
+    instruction '-exportcontents', '!org.javasimon.console*, org.javasimon.*'
   }
 }
