--- a/modules/figurate-log/build.gradle
+++ b/modules/figurate-log/build.gradle
@@ -4,6 +4,7 @@ dependencies {
     compile 'org.apache.logging.log4j:log4j-api:2.0-beta9'
     compile 'org.apache.felix:org.apache.felix.log:1.0.1'
     compile project(':figurate-osgi')
+    compile 'org.fusesource.jansi:jansi:1.11'
 }
 
 jar {
