--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,7 @@ subprojects {
             'org.apache.felix:org.apache.felix.framework:4.0.2',
             'org.apache.felix:org.apache.felix.scr.annotations:1.9.6',
             'org.apache.felix:org.apache.felix.scr.ant:1.9.0',
+                'org.codehaus.gpars:gpars:1.1.0'
 
             // start: blueprint dependencies..
 //            'org.apache.aries.blueprint:org.apache.aries.blueprint:1.1.0',
@@ -82,7 +83,17 @@ dependencies {
 	testCompile 'org.apache.felix:org.apache.felix.framework:4.0.2'
 
     runtime([
-        // adding this to ensure the bundle is in the cache..
-        'org.apache.felix:org.apache.felix.scr:1.8.2'
+            // adding this to ensure the bundle is in the cache..
+            'org.apache.felix:org.apache.felix.scr:1.8.2',
+//            'org.apache.felix:org.apache.felix.http.whiteboard:2.2.2',
+//            'org.apache.felix:org.apache.felix.http.jetty:2.2.2',
+            'org.apache.felix:org.apache.felix.http.bundle:2.2.2',
+            'org.apache.felix:org.apache.felix.dependencymanager:3.1.0',
+            'org.amdatu.web.rest.jaxrs:org.amdatu.web.rest.jaxrs:1.0.4',
+            'org.amdatu.web.rest.wink:org.amdatu.web.rest.wink:1.0.8',
+            'org.codehaus.jackson:jackson-jaxrs:1.9.13',
+            'org.codehaus.jackson:jackson-core-asl:1.9.13',
+            'org.codehaus.jackson:jackson-mapper-asl:1.9.13',
+            'org.codehaus.jsr166-mirror:jsr166y:1.7.0'
     ])
 }
