--- a/build.gradle
+++ b/build.gradle
@@ -55,6 +55,8 @@ subprojects {
 //            'org.apache.aries.proxy:org.apache.aries.proxy.impl:1.0.2',
 //            'asm:asm-all:3.2'
             // end: blueprint
+
+            'org.gcontracts:gcontracts-core:1.2.12',
         ])
 	}
 
