--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,8 @@ allprojects {
     }
 
 	dependencies {
-		compile 'org.codehaus.groovy:groovy-all:2.1.7'
+		compile(['org.codehaus.groovy:groovy-all:2.3.0-beta-2',
+                 'org.apache.felix:org.apache.felix.framework:4.0.2'])
 
         testCompile 'org.spockframework:spock-core:0.7-groovy-2.0'
         testCompile 'ch.qos.logback:logback-classic:1.1.1'
@@ -43,7 +44,6 @@ subprojects {
 
         compile([
             'biz.aQute.bnd:bndlib:2.2.0',
-            'org.apache.felix:org.apache.felix.framework:4.0.2',
             'org.apache.felix:org.apache.felix.scr.annotations:1.9.6',
             'org.apache.felix:org.apache.felix.scr.ant:1.9.0',
             'org.codehaus.gpars:gpars:1.1.0',
@@ -58,6 +58,8 @@ subprojects {
 
             'org.gcontracts:gcontracts-core:1.2.12',
         ])
+
+//        testCompile project(':tests')
 	}
 
     ant.properties.src = 'build/classes/main'
@@ -80,13 +82,6 @@ dependencies {
         project(':figurate-log'),
         project(':figurate-common'),
     ])
-	testCompile 'org.ops4j.pax.exam:pax-exam-container-native:3.3.0'
-	testCompile 'org.ops4j.pax.exam:pax-exam-junit4:3.3.0'
-	testCompile 'org.ops4j.pax.exam:pax-exam-link-mvn:3.3.0'
-	testCompile 'org.ops4j.pax.url:pax-url-aether:1.6.0'
-	testCompile 'ch.qos.logback:logback-classic:1.0.13'
-	testCompile 'com.google.guava:guava:15.0'
-	testCompile 'org.apache.felix:org.apache.felix.framework:4.0.2'
 
     runtime([
             // adding this to ensure the bundle is in the cache..
