Relocated osgi tests

--- a/modules/figurate-osgi/src/test/resources/config/HttpVersionSpec.config
+++ b/modules/figurate-osgi/src/test/resources/config/HttpVersionSpec.config
@@ -10,7 +10,10 @@ import org.osgi.framework.ServiceRegistration
  */
 osgi = { binding ->
     config {
-        ['org.osgi.framework.storage'        : 'build/felix-cache',
+        [
+         'org.osgi.framework.executionenvironment': 'J2SE-1.7,J2SE-1.6,J2SE-1.5,J2SE-1.4,J2SE-1.3',
+         'org.osgi.framework.system.packages.extra': 'org.gcontracts,org.gcontracts.annotations,org.gcontracts.generation',
+         'org.osgi.framework.storage'        : 'build/felix-cache',
          'org.osgi.framework.storage.clean'  : 'onFirstInit',
          'felix.log.level'                   : '4',
          'org.osgi.service.http.port'        : '8081',
@@ -77,8 +80,9 @@ osgi = { binding ->
                 'org.apache.felix/org.apache.felix.scr/1.8.2/bundle/c3047d56ee57de0752821fd9c3894dda664f2e37/org.apache.felix.scr-1.8.2.jar',
                 'org.apache.felix/org.apache.felix.dependencymanager/3.1.0/bundle/413a8b8507a3dd655cae768851989513ddea001a/org.apache.felix.dependencymanager-3.1.0.jar',
                 'org.apache.felix/org.apache.felix.log/1.0.1/bundle/af69a7c5c46be83a5527d4c146c69ce1c00b9e20/org.apache.felix.log-1.0.1.jar',
-                'org.codehaus.groovy/groovy-all/2.1.7/jar/c136ae67c3c40740ae986582baf65ba5c5ce69a0/groovy-all-2.1.7.jar',
+                'org.codehaus.groovy/groovy-all/2.3.0-beta-2/jar/1736a8c7c9aaa06295989f7842802874d4224109/groovy-all-2.3.0-beta-2.jar',
                 'org.codehaus.gpars/gpars/1.1.0/jar/32b489ab3f4e7e5d8282189140591c791917f9cb/gpars-1.1.0.jar',
+// non-osgi            'org.gcontracts/gcontracts-core/1.2.12/jar/e8eb1ce5d29773399504cdac3145d4d00a6ee654/gcontracts-core-1.2.12.jar',
                 'org.fusesource.jansi/jansi/1.11/jar/655c643309c2f45a56a747fda70e3fadf57e9f11/jansi-1.11.jar',
 //                        'org.apache.felix/org.apache.felix.http.jetty/2.2.2/jar/66f05113deb305be8ad1b80c538ad526cfc66a9c/org.apache.felix.http.jetty-2.2.2.jar',
 //                        'org.apache.felix/org.apache.felix.http.whiteboard/2.2.2/jar/eea2890ee68432de5fd97d100ff6e4390205e3ea/org.apache.felix.http.whiteboard-2.2.2.jar',
