--- a/modules/figurate-osgi/src/test/resources/config/OsgiAdapterSpec.config
+++ b/modules/figurate-osgi/src/test/resources/config/OsgiAdapterSpec.config
@@ -10,6 +10,8 @@ import org.osgi.framework.BundleContext
 osgi = { binding ->
 config  {
     [
+            'org.osgi.framework.executionenvironment': 'J2SE-1.7,J2SE-1.6,J2SE-1.5,J2SE-1.4,J2SE-1.3',
+            'org.osgi.framework.system.packages.extra': 'org.gcontracts,org.gcontracts.annotations,org.gcontracts.generation',
             'org.osgi.framework.storage': 'build/felix-cache',
             'org.osgi.framework.storage.clean': 'onFirstInit',
             'felix.systembundle.activators': [
@@ -34,8 +36,9 @@ bundles  {
             'ch.qos.logback/logback-classic/1.0.13/jar/6b56ec752b42ccfa1415c0361fb54b1ed7ca3db6/logback-classic-1.0.13.jar',
             // scr
             'org.apache.felix/org.apache.felix.scr/1.8.2/bundle/c3047d56ee57de0752821fd9c3894dda664f2e37/org.apache.felix.scr-1.8.2.jar',
-            'org.codehaus.groovy/groovy-all/2.1.7/jar/c136ae67c3c40740ae986582baf65ba5c5ce69a0/groovy-all-2.1.7.jar',
+            'org.codehaus.groovy/groovy-all/2.3.0-beta-2/jar/1736a8c7c9aaa06295989f7842802874d4224109/groovy-all-2.3.0-beta-2.jar',
             'org.codehaus.gpars/gpars/1.1.0/jar/32b489ab3f4e7e5d8282189140591c791917f9cb/gpars-1.1.0.jar',
+// non-osgi            'org.gcontracts/gcontracts-core/1.2.12/jar/e8eb1ce5d29773399504cdac3145d4d00a6ee654/gcontracts-core-1.2.12.jar',
             'org.codehaus.jsr166-mirror/jsr166y/1.7.0/jar/8547fcb1c29b4f8c745c3f49a536aca58fc30f54/jsr166y-1.7.0.jar',
             'org.fusesource.jansi/jansi/1.11/jar/655c643309c2f45a56a747fda70e3fadf57e9f11/jansi-1.11.jar',
             // rest
