--- a/modules/figurate-osgi/src/test/resources/config/HttpVersionSpec.config
+++ b/modules/figurate-osgi/src/test/resources/config/HttpVersionSpec.config
@@ -12,7 +12,7 @@ osgi = { binding ->
     config {
         [
          'org.osgi.framework.executionenvironment': 'J2SE-1.7,J2SE-1.6,J2SE-1.5,J2SE-1.4,J2SE-1.3',
-         'org.osgi.framework.system.packages.extra': 'org.gcontracts,org.gcontracts.annotations,org.gcontracts.generation',
+         'org.osgi.framework.system.packages.extra': 'sun.misc,org.gcontracts,org.gcontracts.annotations,org.gcontracts.generation',
          'org.osgi.framework.storage'        : 'build/felix-cache',
          'org.osgi.framework.storage.clean'  : 'onFirstInit',
          'felix.log.level'                   : '4',
