--- a/modules/figurate-monitor/build.gradle
+++ b/modules/figurate-monitor/build.gradle
@@ -1,16 +1,29 @@
 dependencies {
-  compile 'org.javasimon:javasimon-core:3.4.0'
-  compile 'org.javasimon:javasimon-console-embed:3.4.0'
+    compile(['org.javasimon:javasimon-core:3.4.0',
+           'org.javasimon:javasimon-console-embed:3.4.0'
+    ])
+
+    compile([
+            'org.amdatu.web.rest.wink:org.amdatu.web.rest.wink:1.0.8',
+            'org.amdatu.web.rest.jaxrs:org.amdatu.web.rest.jaxrs:1.0.4',
+            project(':figurate-common'),
+    ])
+
+    testCompile([
+            project(':tests'),
+            project(':figurate-osgi'),
+    ])
 }
 
-task copyDeps(type: Copy) {
-    from configurations.runtime
-    into "${buildDir}/deps"
-}
+//task copyDeps(type: com.sun.org.apache.xalan.internal.xsltc.compiler.Copy) {
+//    from configurations.runtime
+//    into "${buildDir}/deps"
+//}
 
 jar {
   manifest {
     instruction 'Include-Resource', "${buildDir}/deps/javasimon-core-3.4.0.jar, ${buildDir}/deps/javasimon-console-embed-3.4.0.jar"
     instruction '-exportcontents', '!org.javasimon.console*, org.javasimon.*'
+    instruction 'Service-Component', 'OSGI-INF/org.figurate.monitor.endpoint.SystemInfo.xml'
   }
 }
