--- a/bootstrap/build.gradle
+++ b/bootstrap/build.gradle
@@ -1,3 +1,9 @@
+ext.pomName = 'Figurate Bootstrap'
+
+description = '''\
+A collection of bootstrap classes for loading and configuring OSGi constellations
+'''
+
 dependencies {
     compile 'org.slf4j:slf4j-api:1.7.5'
 }
