--- a/modules/figurate-mail/build.gradle
+++ b/modules/figurate-mail/build.gradle
@@ -1,3 +1,9 @@
+ext.pomName = 'Figurate Email'
+
+description = '''\
+Email support
+'''
+
 dependencies {
   compile 'javax.mail:mail:1.5.0-b01'
 }
